--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,8 @@
     <string name="app_name">SplendorApp</string>
     <string name="action_settings">Settings</string>
 
-    <string name="title_activity_game_view">GameView</string>
     <string name="quit_button">Quit Game?</string>
     <string name="dummy_content">GAME\nVIEW</string>
+    <string name="cancel">cancel</string>
+    <string name="ok">OK</string>
 </resources>
